<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="title_text_view">TITLE</string>
    <string name="title_edit_hint">Enter a title for the crime.</string>
    <string name="detail_text_view">DETAILS</string>
    <string name="solved_check_box">Solved</string>
    <string name="date_picker_title"> Date of Crime:</string>
    <string name="add_crime">Add New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="delete"> Delete </string>
    <string name="no_crime">There is no crime ..</string>

    <plurals name="subtiltle_plural">
        <item quantity="zero">%1$d crime</item>
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>

    <string name="crime_suspect_text">Choose suspect</string>
    <string name="crime_report_text"> Send Report</string>
    <string name="crime_report">%1$s! The Crime was discovered on %2$s. %3$s, and %4$s  </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_suspect">The suspect is %s.</string>
    <string name="crime_report_no_suspect">There is no suspect </string>
    <string name="crime_report_subject"> CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via : </string>

    <string name="call_suspect">Call Suspect</string>
</resources>
